moins de soucis

--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -289,9 +289,11 @@ H(Z6) = 0.684
 \]
 \\
 
-
+Et nous remarquons que le meilleure recodage en 3 variables est Z1.
 
 \subsection{Le meilleur recodage de X pour prédire Y }
+
+Il sagit ici d
 
 \[
 I(Z1,Y) = 0.147
