--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -551,6 +551,7 @@ Avec toutes les informations mutuelles calculé, on obtient alors l'arbre suivan
 
 \begin{figure}[htbp]
   \centering
+  \caption{Arbre de discrimination pour la comestibilité d'un champignon}
   \resizebox{\textwidth}{!}{
   \begin{tikzpicture}[
     every node/.style={draw, rectangle, rounded corners, align=center, minimum size=6mm, font=\scriptsize},
