--- a/TID/DM.tex
+++ b/TID/DM.tex
@@ -233,11 +233,11 @@ Z4 =\{ \{0 \% , 0 - 0.5 \% ,0.5-1 \% ,1-3 \% \} , \{>3 \% \} \}
 L'entropie de chacun de ses recodages se calcule numeriquement et donne :
 
 \[
-H(Z1) = -\left(\frac{29}{72}log_2(\frac{29}{72})+\frac{43}{72}log_2(\frac{43}{72})\right) = 0.973
+H(Z1) = -\left(\frac{29}{72}log(\frac{29}{72})+\frac{43}{72}log(\frac{43}{72})\right) = 0.674
 \]
 De la même manière, nous trouvons.
 \[
-H(Z2) = 0.954 \hspace{1cm} H(Z3) = 0.617 \hspace{1cm} H(Z4) = 0.106
+H(Z2) = 0.661 \hspace{1cm} H(Z3) = 0.427 \hspace{1cm} H(Z4) = 0.073
 \]
 Le meilleur recodage est donc le premiers c'est à dire :
 $Z1 =\{ \{0 \% \} , \{0 - 0.5 \% ,0.5-1 \% ,1-3 \% ,>3 \% \} \}$
@@ -268,7 +268,7 @@ Z1 =\{ \{0 \% \} , \{0 - 0.5 \%\} ,\{0.5-1 \% ,1-3 \% ,>3 \% \} \}
 \\
 L'entropie est calculé numériquement :
 \[
-H(Z1) = 1.541 \hspace{0.5cm} H(Z2) = 1.462 \hspace{0.5cm} H(Z3) = 1.068 \hspace{0.5cm} H(Z4) = 1.040 \hspace{0,5cm} H(Z5) = 1.320 \hspace{0,5 cm} H(Z6) = 0.684
+H(Z1) = 1.068 \hspace{0.5cm} H(Z2) = 1.014 \hspace{0.5cm} H(Z3) = 0.740 \hspace{0.5cm} H(Z4) = 0.720 \hspace{0,5cm} H(Z5) = 0.915 \hspace{0,5 cm} H(Z6) = 0.474
 \]
 Nous remarquons que le meilleure recodage en 3 variables est $Z1$.
 
